<resources>
    <string name="app_name">!Insta</string>
    <string name="action1_navigation" translatable="false">Home</string>
    <string name="action2_navigation">Search</string>
    <string name="action3_navigation">User Profile</string>
    <string name="action4_navigation">Settings</string>
    <string name="fotocamera">Camera</string>
    <string name="impostazioni">Settings</string>
    <string name="Insta" translatable="false">!Insta</string>
    <string name="loginGoogle">Continue with Google</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="password" translatable="false">Password</string>
    <string name="forgotPassword">Forgot your password?</string>
    <string name="username">Username</string>
    <string name="passwordRepeat">Repeat password</string>
    <string name="or">Or</string>
    <string name="login" translatable="false">Login</string>
    <string name="signup">Sign up</string>
    <string name="terms1">By continuing you agree to our</string>
    <string name="terms2">Terms and Conditions</string>
    <string name="error_email">E-mail not valid</string>
    <string name="error_password">Password not valid</string>
    <string name="error_passwordMatch">The passwords do not match</string>
    <string name="error_signup">Sign up failed</string>
    <string name="error_login">Login failed</string>
    <string name="success_signup">Sign up was successful</string>
    <string name="error_username">Username not valid</string>
    <string name="logout" translatable="false">Log out</string>
    <string name="greetings">"Hi "</string>
    <string name="success_logout">Log out successful</string>
    <string name="success_login">Log in successful</string>
    <string name="title_activity_image_filter" translatable="false">ImageFilterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="changeLanguage">Change language</string>
    <string name="changePassword">Change password</string>
    <string name="changePic">Change picture</string>
    <string name="changePrivacy">Private account</string>
    <string name="changeUsername">Change username</string>
    <string name="deleteAccount">Delete account</string>
    <string name="enableNotifies">Enable notifies</string>
    <string name="settingsTitle">Settings</string>
    <string name="showLikes">Show likes</string>
    <string name="signOut">Sign out</string>
    <string name="insertNewPassword">Insert new password</string>

    <string-array name="languages_array">
        <item>English</item>
        <item>Italiano</item>
    </string-array>

    <string name="lorem_ipsum" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris volutpat, dolor id
        interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus dui nec risus. Maecenas non sodales
        nisi, vel dictum dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
        himenaeos. Suspendisse blandit eleifend diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet,
        imperdiet nisl a, ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus egestas, est a
        condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed neque. Morbi tellus erat, dapibus ut
        sem a, iaculis tincidunt dui. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur et eros
        porttitor, ultricies urna vitae, molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl
        nec dolor bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit amet auctor at,
        mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel, molestie quam. Fusce blandit tincidunt
        nulla, quis sollicitudin libero facilisis et. Integer interdum nunc ligula, et fermentum metus hendrerit id.
        Vestibulum lectus felis, dictum at lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse
        sodales nunc ligula, in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh. Morbi laoreet, tortor
        sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui non lorem. Nam mollis ipsum quis auctor
        varius. Quisque elementum eu libero sed commodo. In eros nisl, imperdiet vel imperdiet et, scelerisque a mauris.
        Pellentesque varius ex nunc, quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non
        viverra ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a placerat
        diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
        egestas. In volutpat arcu ut felis sagittis, in finibus massa gravida. Pellentesque id tellus orci. Integer
        dictum, lorem sed efficitur ullamcorper, libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec
        maximus ullamcorper sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus vestibulum. Fusce
        dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="hue" translatable="false">Hue</string>
    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
    <string name="saturation">Saturation</string>
    <string name="pixelate">Pixelate</string>
    <string name="confirm_image_choice_button_text" translatable="false">Ok</string>
    <string name="open_camera_app_button_text">Open Camera</string>
    <string name="open_gallery_button_text">Choose from Gallery</string>
    <string name="imagePicture">Image picture</string>
    <string name="changeUsernameText">Insert new username</string>
    <string name="usernameText">New username</string>
    <string name="changePasswdTitle">Change password</string>
    <string name="oldPasswordText">Insert old password</string>
    <string name="username_changed">Username has been changed</string>
    <string name="password_changed">Password has been changed</string>
    <string name="password_length">Password lentgh must be at least 6</string>
    <string name="password_different">Passwords must be different</string>
    <string name="button_to_post_desc">Next</string>
    <string name="prev_button">Back</string>
    <string name="next_button">Next</string>
    <string name="add_tag_button" translatable="false">+</string>
    <string name="description_text_hint">Write a description</string>
    <string name="tag_text_hint" translatable="false">Tag</string>
    <string name="is_promotional_checkbox">Is Promotional?</string>

    <string name="error_retrieving_products">Error in retrieving the products</string>

    <string name="error_user_collision_message">User already exists</string>
    <string name="error_login_password_message">Invalid credentials</string>
    <string name="error_login_user_message">User not valid</string>
    <string name="back">Back</string>
    <string name="termsConditions">Terms and conditions will be described here.</string>
    <string name="pass_special">Password must contain at least one special character</string>
    <string name="passwordButton">Send email</string>

    <string name="post_created">Post successfully created</string>
    <string name="post_created_local_only">Post created in local</string>
    <string name="post_created_remote_only">Post created in remote</string>
    <string name="post_created_no_remote_image">Post created, but image not loaded</string>
    <string name="post_not_created">Not able to create this post</string>
    <string name="unexpected_error">Unexpected error</string>
    <string name="error_no_google_account_found_message">No Google account found</string>
    <string name="likes">Likes:</string>
    <string name="Author">Author:</string>
    <string name="publish">Published at:</string>
    <string name="Followers" translatable="false">Followers: %1$d</string>
    <string name="Followee" translatable="false">Followee: %1$d</string>
    <string name="research">Search</string>
    <string name="benvenuto">Welcome to !Insta!</string>
    <string name="check_login_data_message">Data not valid</string>
</resources>